--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
      </div>  
      <!--------- logo + welcome --------->
      <div class="gif">
-         <img id="logo4" src="images/logo_post5.gif" alt="logo">
+         <img id="logo4" src="logo_post5.gif" alt="logo">
      </div>
      <!--------- --*********-- --------->
      
