--- a/index.html
+++ b/index.html
@@ -69,11 +69,14 @@
 
     </div>
     <!-------- AIM AND OBJECTIVE ------>
-    <div class="aimed">
-        <button class="btn"> <span >
+    <div class="obj">
+        <div class="btn">
             <a class ="text" href="https://docs.google.com/forms/d/1rDQEJb0pi7MGy_v71N2MFPQfJQL6NQvRVjbos-Mq9LI/">ENROLL</a></span>
-        </button>
-        <img id ="objectives" src="randwa3.png" alt="">
+        </div>
+        <div class="obj-img">
+            <img  class="obj-img1" src="randwa3.png" alt="">
+        </div>
+        </div>
     </div>
     
 
@@ -142,3 +145,4 @@
     <!-- ----------------- -->
 </body>
 </html>
+
