--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset = "UTF-8">
     <meta http-equiv = "X-UA-Compatible" content = "IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RG</title>
+    <title>RandwaGang</title>
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.5.1.min.js">
     </script>  
     
@@ -22,6 +22,10 @@
    
     
      <!--------- logo + welcome --------->
+     <div class="gif2">
+        <img id="logo5" src="logo_post5.gif" alt="logo">
+    </div>
+
      <div class="gif">
          <img id="logo4" src="logo_post5.gif" alt="logo">
      </div>
@@ -140,4 +144,5 @@
     <!-- ----------------- -->
 </body>
 </html>
+
 
