--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>RandwaGang</title>
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.5.1.min.js">
     </script>  
-    
+     <meta name="description" content="@YouAreBeingWatched">
     <link rel="icon" type="image/x-icon" href="favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
